--- a/src/app/pieces/role/role.component.html
+++ b/src/app/pieces/role/role.component.html
@@ -72,6 +72,7 @@ matTooltipPosition="left" [matTooltipDisabled]="!tooltipService.activatedTooltip
                         <option value="objective">{{'role_reward_type_objective' | translate}}</option>
                         <option value="objects" hidden>{{'role_reward_type_object' | translate}}</option>
                         <option value="object">{{'role_reward_type_object' | translate}}</option>
+                        <option value="randomObjects">{{'role_reward_type_randomObjects' | translate}}</option>                        
                         <option value="discussion">{{'role_reward_type_discussion' | translate}}</option>
                         <option value="other" *ngIf="!unityService.unity_isActive">{{'role_reward_type_other' | translate}}</option>
                     </select>                    
@@ -171,6 +172,43 @@ matTooltipPosition="left" [matTooltipDisabled]="!tooltipService.activatedTooltip
                 <div class="piece-form-rewards-reward-other" *ngIf="reward.type == 'other' && !unityService.unity_isActive">
                     <textarea [(ngModel)]="getOtherReward(i).text" (change)="editTrace($event, 'Reward_['+i+']_other')"></textarea>
                     <button mat-button (click)="removeReward(i)"><mat-icon fontIcon="remove"></mat-icon></button>
+                </div>
+
+                <div class="piece-form-rewards-reward-randomObjects" *ngIf="reward.type == 'randomObjects' && !unityService.unity_isActive">
+                    <div>
+                        <label>{{'rewards_randomObjects_repeat' | translate}} </label>
+                        <input type="number" min="1" [(ngModel)]="getRandomObjectsReward(i).repeatNumber" (change)="editTrace($event, 'Reward_['+i+']_repeat')"/>
+                    </div>
+                    <div *ngFor="let object of getRandomObjectsReward(i).objects, let objectIndex = index">
+                        <div class="piece-form-rewards-reward-randomObjects-object">
+                            <div class="piece-form-rewards-reward-randomObjects-object-percentage" [matTooltip]="translate.instant('rewards_randomObjects_percentages_tootlip')"
+                            matTooltipPosition="before" [matTooltipDisabled]="!tooltipService.activatedTooltips">
+                                <input type="number" min="0" max="100" [(ngModel)]="getRandomObjectsReward(i).dropPercentages[objectIndex]"
+                                    (change)="editTrace($event, 'Reward_['+i+']_object_['+objectIndex+']_percentage')"/>
+                                <label>%</label>
+                            </div>
+                            <select name="object_name" [(ngModel)]="getRandomObjectsReward(i).objects[objectIndex]" (change)="editTrace($event, 'Reward_['+i+']_object_['+objectIndex+']_object')">
+                                <option value="undefined" selected disabled>{{'rewards_object_placeholder' | translate}}</option>
+                                <ng-container *ngFor="let ressource of scenario.ressources">
+                                    <option *ngIf="ressource.type == 'ressource'" [ngValue]="ressource">{{ressource.name}}</option>
+                                </ng-container>
+                                <ng-container *ngFor="let ressource of this.role.ressources">
+                                    <option *ngIf="ressource.type == 'ressource'" [ngValue]="ressource">{{ressource.name}}</option>
+                                </ng-container>
+                            </select>
+                            <button mat-button (click)="removeObjectToRandomObjectsReward(getRandomObjectsReward(i), i, objectIndex)" *ngIf="getRandomObjectsReward(i).objects.length > 1"><mat-icon fontIcon="remove"></mat-icon></button>
+                        </div>
+                        <div>
+                            <label>{{'rewards_randomObjects_dropBetween_part1' | translate}} </label>
+                            <input type="number" min="0" [(ngModel)]="getRandomObjectsReward(i).minDroppedQuantities[objectIndex]" (change)="editTrace($event, 'Reward_['+i+']_object_['+objectIndex+']_minQuantity')"/>
+                            <label> {{'rewards_randomObjects_dropBetween_part2' | translate}} </label>
+                            <input type="number" min="0" [(ngModel)]="getRandomObjectsReward(i).maxDroppedQuantities[objectIndex]" (change)="editTrace($event, 'Reward_['+i+']_object_['+objectIndex+']_maxQuantity')"/>
+                        </div>
+                    </div>
+                    <div class="piece-form-rewards-reward-randomObjects-buttons">
+                        <button mat-button class="piece-form-rewards-reward-randomObjects-button-add" (click)="addObjectToRandomObjectsReward(getRandomObjectsReward(i), i)"><mat-icon fontIcon="add"></mat-icon></button>
+                        <button mat-button (click)="removeReward(i)"><mat-icon fontIcon="remove"></mat-icon></button>                        
+                    </div>
                 </div>
             </div>  
             <div class="piece-form-rewards-add">
