--- a/src/app/sider-pieces/rewards/rewards.component.html
+++ b/src/app/sider-pieces/rewards/rewards.component.html
@@ -9,6 +9,7 @@ matTooltipPosition="before" [matTooltipDisabled]="!tooltipService.activatedToolt
                 <select name="type" [(ngModel)]="reward.type" (change)="changeRewardType(rewardIndex,reward.type)">
                     <!--<option value="none" selected>{{'rewards_type_none' | translate}}</option>-->
                     <option value="object">{{'rewards_type_object' | translate}}</option>
+                    <option value="randomObjects" *ngIf="!unityService.unity_isActive">{{'rewards_type_randomObjects' | translate}}</option>
                     <option value="character">{{'rewards_type_character' | translate}}</option>
                     <option value="skill">{{'rewards_type_skill' | translate}}</option>
                 </select>
@@ -31,6 +32,39 @@ matTooltipPosition="before" [matTooltipDisabled]="!tooltipService.activatedToolt
                             <option *ngIf="ressource.type == 'ressource'" [ngValue]="ressource">{{ressource.name}}</option>
                         </ng-container>
                     </select>
+                </div>
+                <div class="piece-form-content-randomObjects" *ngIf="reward.type == 'randomObjects' && !unityService.unity_isActive">
+                    <div class="piece-form-content-randomObjects-repeat">
+                        <label>{{'rewards_randomObjects_repeat' | translate}} </label>
+                        <input type="number" min="1" [(ngModel)]="getRandomObjectsReward(rewardIndex).repeatNumber" (change)="editTrace($event, 'Reward_['+rewardIndex+']_repeat')"/>
+                    </div>
+                    <div *ngFor="let object of getRandomObjectsReward(rewardIndex).objects, let objectIndex = index">
+                        <div class="piece-form-content-randomObjects-object">
+                            <div [matTooltip]="translate.instant('rewards_randomObjects_percentages_tootlip')"
+                            matTooltipPosition="before" [matTooltipDisabled]="!tooltipService.activatedTooltips">
+                                <input type="number" min="0" max="100" [(ngModel)]="getRandomObjectsReward(rewardIndex).dropPercentages[objectIndex]"
+                                    (change)="editTrace($event, 'Reward_['+rewardIndex+']_object_['+objectIndex+']_percentage')"/>
+                                <label>%</label>
+                            </div>
+                            <select name="object_name" [(ngModel)]="getRandomObjectsReward(rewardIndex).objects[objectIndex]" (change)="editTrace($event, 'Reward_['+rewardIndex+']_object_['+objectIndex+']_object')">
+                                <option value="undefined" selected disabled>{{'rewards_object_placeholder' | translate}}</option>
+                                <ng-container *ngFor="let ressource of scenario.ressources">
+                                    <option *ngIf="ressource.type == 'ressource'" [ngValue]="ressource">{{ressource.name}}</option>
+                                </ng-container>
+                                <ng-container *ngFor="let ressource of pieceDetailsService.parentAsRole().ressources">
+                                    <option *ngIf="ressource.type == 'ressource'" [ngValue]="ressource">{{ressource.name}}</option>
+                                </ng-container>
+                            </select>
+                            <button mat-button (click)="removeObjectToRandomObjectsReward(getRandomObjectsReward(rewardIndex), rewardIndex, objectIndex)" *ngIf="getRandomObjectsReward(rewardIndex).objects.length > 1"><mat-icon fontIcon="remove"></mat-icon></button>
+                        </div>
+                        <div>
+                            <label>{{'rewards_randomObjects_dropBetween_part1' | translate}} </label>
+                            <input type="number" min="0" [(ngModel)]="getRandomObjectsReward(rewardIndex).minDroppedQuantities[objectIndex]" (change)="editTrace($event, 'Reward_['+rewardIndex+']_object_['+objectIndex+']_minQuantity')"/>
+                            <label> {{'rewards_randomObjects_dropBetween_part2' | translate}} </label>
+                            <input type="number" min="0" [(ngModel)]="getRandomObjectsReward(rewardIndex).maxDroppedQuantities[objectIndex]" (change)="editTrace($event, 'Reward_['+rewardIndex+']_object_['+objectIndex+']_maxQuantity')"/>
+                        </div>
+                    </div>
+                    <button mat-button class="piece-form-content-randomObjects-button-add" (click)="addObjectToRandomObjectsReward(getRandomObjectsReward(rewardIndex), rewardIndex)"><mat-icon fontIcon="add"></mat-icon></button>
                 </div>
                 <div class="piece-form-content-character" *ngIf="reward.type == 'character'">
                     <select name="character" [(ngModel)]="getCharacterReward(rewardIndex).character" (change)="editTrace($event, 'Reward_['+rewardIndex+']_character')">
