--- a/src/app/pieces/rules/rules.component.html
+++ b/src/app/pieces/rules/rules.component.html
@@ -41,5 +41,49 @@
                 <button mat-button (click)="addRessource()"><mat-icon fontIcon="add"></mat-icon></button>
             </div>
         </div>
+        <div class="piece-form-gameMovements">
+            <div class="piece-form-title">{{'rules_gameMovements_title' | translate}}</div>
+            <textarea [(ngModel)]="scenario.gameMovements" (change)="editTrace($event,'gameMovements')"
+            [placeholder]="translate.instant('rules_gameMovements_placeholder')"></textarea>
+        </div>
+        <div class="piece-form-gameMechanics">
+            <div class="piece-form-title">{{'rules_gameMechanics_title' | translate}}</div>
+            <div class="piece-form-gameMechanics-mechanics" 
+            [class]="scenario.gameTutorial!='' || scenario.gameEasterEggs!='' || scenario.gameRanking!='' || scenario.gameBadges!='' ? forceShowDisplayMechanics() : mechanicsExpanded">
+                <div class="piece-form-gameMechanics-mechanics-tutorial"
+                [matTooltip]="translate.instant('rules_gameMechanics_tutorial_tooltip')"
+                matTooltipPosition="after" [matTooltipDisabled]="!tooltipService.activatedTooltips">
+                    <label for="gameTutorial">{{'rules_gameMechanics_tutorial_label' | translate}}</label>
+                    <textarea name="gameTutorial" [(ngModel)]="scenario.gameTutorial" (change)="editTrace($event,'tutorial')"
+                    [placeholder]="translate.instant('rules_gameMechanics_tutorial_placeholder')"></textarea>
+                </div>
+                <div class="piece-form-gameMechanics-mechanics-easterEggs"
+                [matTooltip]="translate.instant('rules_gameMechanics_easterEggs_tooltip')"
+                matTooltipPosition="after" [matTooltipDisabled]="!tooltipService.activatedTooltips">
+                    <label for="gameEasterEggs">{{'rules_gameMechanics_easterEggs_label' | translate}}</label>
+                    <textarea name="gameEasterEggs" [(ngModel)]="scenario.gameEasterEggs" (change)="editTrace($event,'easterEggs')"
+                    [placeholder]="translate.instant('rules_gameMechanics_easterEggs_placeholder')"></textarea>
+                </div>
+                <div class="piece-form-gameMechanics-mechanics-ranking"
+                [matTooltip]="translate.instant('rules_gameMechanics_ranking_tooltip')"
+                matTooltipPosition="after" [matTooltipDisabled]="!tooltipService.activatedTooltips">
+                    <label for="gameRanking">{{'rules_gameMechanics_ranking_label' | translate}}</label>
+                    <textarea name="gameRanking" [(ngModel)]="scenario.gameRanking" (change)="editTrace($event,'ranking')"
+                    [placeholder]="translate.instant('rules_gameMechanics_ranking_placeholder')"></textarea>
+                </div>
+                <div class="piece-form-gameMechanics-mechanics-badges"
+                [matTooltip]="translate.instant('rules_gameMechanics_badges_tooltip')"
+                matTooltipPosition="after" [matTooltipDisabled]="!tooltipService.activatedTooltips">
+                    <label for="gameBadges">{{'rules_gameMechanics_badges_label' | translate}}</label>
+                    <textarea name="gameBadges" [(ngModel)]="scenario.gameBadges" (change)="editTrace($event,'badges')"
+                    [placeholder]="translate.instant('rules_gameMechanics_badges_placeholder')"></textarea>
+                </div>
+            </div>
+            <button mat-button class="piece-form-gameMechanics-button-add" (click)="changeDisplayMechanics()"
+            [disabled]="scenario.gameTutorial!='' || scenario.gameEasterEggs!='' || scenario.gameRanking!='' || scenario.gameBadges!=''">
+                <mat-icon fontIcon="expand_more" *ngIf="mechanicsExpanded == 'hide'"></mat-icon>
+                <mat-icon fontIcon="expand_less" *ngIf="mechanicsExpanded == 'show'"></mat-icon>
+            </button>
+        </div>
     </div>
 </div>
