--- a/src/app/components/tutorial/tutorial.component.html
+++ b/src/app/components/tutorial/tutorial.component.html
@@ -47,6 +47,9 @@
                 <button mat-button [style.background-color]="'#e8e3b3'" (click)="setOptionnalPhase('optionnalTask')">{{'tutorial_optionnal_optionnalTask' | translate}}</button>
                 <button mat-button [style.background-color]="'#a6c9ec'" (click)="setOptionnalPhase('repeatTask')">{{'tutorial_optionnal_repeatTask' | translate}}</button>
             </div>
+            <div class="piece-optionnal-options-line">
+                <button mat-button [style.background-color]="'#c6c2bd'" (click)="setOptionnalPhase('gameMechanics')">{{'tutorial_optionnal_gameMechanics' | translate}}</button>
+            </div>
         </div>
     </div>
 
