--- a/src/app/components/tutorial/tutorial.component.html
+++ b/src/app/components/tutorial/tutorial.component.html
@@ -49,6 +49,7 @@
             </div>
             <div class="piece-optionnal-options-line">
                 <button mat-button [style.background-color]="'#c6c2bd'" (click)="setOptionnalPhase('gameMechanics')">{{'tutorial_optionnal_gameMechanics' | translate}}</button>
+                <button mat-button [style.background-color]="'#cfe3b9'" (click)="setOptionnalPhase('randomObjectsReward')">{{'tutorial_optionnal_randomObjectsReward' | translate}}</button>          
             </div>
         </div>
     </div>
